# mcp-tools-salesforce

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  server.py  tree_api_record.json
.github/prompts/: upload-nested-data.prompt.md
.github/skills/describe-sobject/: SKILL.md  describe_sobject.py
.github/skills/insert-record/: SKILL.md  insert_record.py
.github/skills/upload-nested-data/: SKILL.md
.github/skills/upload-nested-data/scripts/: describe_sobject.py  example_payload.json  insert_record.py  requirements.txt  setup.sh  sf_client.py
