[project]
name = "mcp-salesforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "simple-salesforce>=1.12.9",
    "rich>=14.3.1",
    "fastmcp[openai]>=3.1.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
